# mesa

./: .gitmodules  CMakeLists.txt  README.md
experiments/: .gitignore  CMakeLists.txt  README.md  g2o-2-mr-jrl.cpp  run-dist-batch.cpp
experiments/batch_runners/: CMakeLists.txt
experiments/batch_runners/include/batch_runners/: ASAPPRunner-inl.h  ASAPPRunner.h  BatchRunner-inl.h  BatchRunner.h  Centralized-inl.h  Centralized.h  DDFSAM-inl.h  DDFSAM.h  DGSRunner-inl.h  DGSRunner.h  Factory.h  Independent-inl.h  Independent.h  MBADMMRunner-inl.h  MBADMMRunner.h  MESARunner-inl.h  MESARunner.h
mesa/: CMakeLists.txt  README.md
mesa/include/mesa/: BatchMESA-inl.h  BatchMESA.h  BatchMESAVariants.h  BiasedPriors.h  CorrectPrior.h
scripts/: README.md  compare-acc-to-comms  compare-average-convergence  compare-avg-final-results  compare-convergence  make-multi-robot-2d-dataset  make-multi-robot-3d-dataset  make-multi-robot-linear-dataset  plot-jrl  plot-results  run-experiment
scripts/helpers/: compare_accuracy_to_comms.py  compare_average_convergence.py  compare_average_final_results.py  compare_convergence.py  parse_results_directory.py  plot_summaries.py  plot_trajectories.py  run_experiment.py  style_sheet.py
